# rotary_encoder

./: CMakeLists.txt  board_config.h  main.c  rotary_encoder.c  rotary_encoder.h
lib/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
lib/pico-sdk/: Makefile  cmake_install.cmake
lib/pico-sdk/docs/: Makefile  cmake_install.cmake
lib/pico-sdk/src/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/hardware_claim/: Makefile
lib/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
lib/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_sync/: Makefile
lib/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
lib/pico-sdk/src/common/pico_util/: Makefile
lib/pico-sdk/src/rp2040/boot_stage2/: Makefile  cmake_install.cmake
lib/pico-sdk/src/rp2040/hardware_regs/: Makefile
lib/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
lib/pico-sdk/tools/: Makefile
(+106 files in other folders)
